--- a/css/index.css
+++ b/css/index.css
@@ -1,12 +1,48 @@
+body{
+  background-color:rgb(236, 243, 250);
+}
 .navbar-brand img {
     max-width: 3em;
     height: auto;
+    position: fixed;
+    top:5px;
+  
 
   }
   .navbar-nav {
     display: flex;
     flex-wrap: wrap;
     font-size:20px;
-    font-family: Impact, 'Arial Narrow Bold', sans-serif;
-    color:red;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
   }
+  .navbar {
+    height: 65px;
+    background-color: rgb(14, 75, 6);
+    border:1px solid #020000;
+  }
+  
+  .sidebar {
+    width: 200px;
+    position: fixed;
+    top: 64px;
+    bottom: 0;
+    left:0;
+    background-color: #ffffff;
+    overflow-x: hidden;
+    transition: 0.5s;
+    padding: 10px;
+    border: 1px solid #023a09;
+    
+  }
+
+  
+  .nav-item{
+    
+    border-bottom: 2px solid #000000;
+    margin-left: 0;
+    text-align: justify;
+    text-shadow: 1px 1px #000000;  
+    
+  }
+ 
+  
