--- a/css/index.css
+++ b/css/index.css
@@ -1,6 +1,7 @@
 body{
   background-color:rgb(236, 243, 250);
  
+  
 }
 .navbar-brand img {
     max-width: 3em;
@@ -34,10 +35,10 @@ body{
     transition: 0.5s;
     padding: 10px;
     border: 1px solid #023a09;
+ 
     
   }
 
-  
   .nav-item{
     
     border-bottom: 2px solid #000000;
@@ -46,5 +47,36 @@ body{
     text-shadow: 1px 1px #000000;  
     
   }
- 
-  
+  .dashboard {
+    margin-top: 20px;
+    padding: 40px;
+    background-color: #f8f9fa;
+    border-radius: 12px;
+    box-shadow: 0px 0px 10px 0px rgba(0, 0, 0, 0.2);
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    margin-left:20em;
+    margin-right:20em;
+}
+
+.metric {
+    text-align: center;
+
+}
+
+.metric .value {
+    font-size: 2rem;
+    font-weight: bold;
+    margin-bottom: 20px;
+    
+}
+
+.metric .label {
+    font-size: 1.5rem;
+    color: #6c757d;
+}
+
+{
+  margin-right:20em;
+}
