--- a/css/index.css
+++ b/css/index.css
@@ -1,5 +1,6 @@
 body{
   background-color:rgb(236, 243, 250);
+
  
   
 }
@@ -47,6 +48,10 @@ body{
     text-shadow: 1px 1px #000000;  
     
   }
+  .logo {
+    width: 150px;
+    height: 150px;
+}
   .dashboard {
     margin-top: 20px;
     padding: 40px;
@@ -77,6 +82,13 @@ body{
     color: #6c757d;
 }
 
-{
-  margin-right:20em;
+/* CSS for footer */
+.footer {
+  position: absolute;
+  bottom: 0;
+  width: 100%;
+  height: 60px; /* Set the height of your footer */
+  background-color: #343a40;
+  color: #fff;
+  text-align: center;
 }
