--- a/css/index.css
+++ b/css/index.css
@@ -1,86 +1,50 @@
-body{
-  background-color:rgb(236, 243, 250);
 
- 
-  
-}
 .navbar-brand img {
-    max-width: 3em;
-    height: auto;
-    position: fixed;
-    top:5px;
-  
-
-  }
-  .navbar-nav {
-    display: flex;
-    flex-wrap: wrap;
-    font-size:20px;
-    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-  }
-  .navbar {
-    height: 65px;
-    background-color: rgb(14, 75, 6);
-    border:1px solid #020000;
-    position:web;
-  }
-  
-  .sidebar {
-    width: 200px;
-    position: fixed;
-    top: 64px;
-    bottom: 0;
-    left:0;
-    background-color: #ffffff;
-    overflow-x: hidden;
-    transition: 0.5s;
-    padding: 10px;
-    border: 1px solid #023a09;
- 
-    
-  }
-
-  .nav-item{
-    
-    border-bottom: 2px solid #000000;
-    margin-left: 0;
-    text-align: justify;
-    text-shadow: 1px 1px #000000;  
-    
-  }
-  .logo {
-    width: 150px;
-    height: 150px;
+  max-width: 3em;
+  height: auto;
+  position: fixed;
+  top: 2px;
 }
-  .dashboard {
-    margin-top: 20px;
-    padding: 40px;
-    background-color: #f8f9fa;
-    border-radius: 12px;
-    box-shadow: 0px 0px 10px 0px rgba(0, 0, 0, 0.2);
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    margin-left:20em;
-    margin-right:20em;
+.navbar-nav {
+  display: flex;
+  flex-wrap: wrap;
+  font-size: 20px;
+  font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
 }
 
-.metric {
-    text-align: center;
+.navbar {
+  height: 65px;
+  border-bottom: 4px solid #000000;
+
 
 }
 
-.metric .value {
-    font-size: 2rem;
-    font-weight: bold;
-    margin-bottom: 20px;
-    
+.sidebar {
+  position: fixed;
+  top: 64px;
+  bottom: 0;
+  left: 0;
+  overflow-x: hidden;
+  transition: 0.5s;
+  padding: 10px;
+  border-right: 4px solid #000000;
 }
 
-.metric .label {
-    font-size: 1.5rem;
-    color: #6c757d;
+.nav-item {
+  border-bottom: 3px solid #000000;
+  margin: 0;
+  text-align: left;
 }
+.nav-link {
+  font-weight: bold;
+  font-family: consolas;
+  color:rgb(0, 0, 0);
+}
+.nav-link {
+  font-weight: bold;
+  font-family: consolas;
+}
+
 
 /* CSS for footer */
 .footer {
@@ -88,7 +52,7 @@ body{
   bottom: 0;
   width: 100%;
   height: 60px; /* Set the height of your footer */
-  background-color: #343a40;
-  color: #fff;
+  background-color: #000000;
+
   text-align: center;
 }
