--- a/css/dashboard.css
+++ b/css/dashboard.css
@@ -6,14 +6,15 @@
 .dashboard {
   margin-top: 20px;
   padding: 100px;
-  background-image: linear-gradient(to top, #f7ff14 0%, #90fa86 100%);
-  border-radius: 50px;
-  box-shadow: 0px 0px 30px 0px rgba(0, 0, 0, 0.3);
+  border-radius: 30px;
+  box-shadow: 0px 2px 12px 2px rgba(0, 0, 0, 0.2);
   display: flex;
   justify-content: space-between;
   align-items: center;
-  margin-left: 15em;
-  margin-right:1em ;
+  background-color:rgb(255, 255, 255);
+
+  
+ 
 }
 
 .metric {
