--- a/css/index.css
+++ b/css/index.css
@@ -1,11 +1,8 @@
-
-
 .navbar-brand img {
   max-width: 3em;
   height: auto;
-  position: fixed;
-  top: 2px;
 }
+
 .navbar-nav {
   display: flex;
   flex-wrap: wrap;
@@ -16,8 +13,6 @@
 .navbar {
   height: 65px;
   border-bottom: 4px solid #000000;
-
-
 }
 
 .sidebar {
@@ -29,6 +24,7 @@
   transition: 0.5s;
   padding: 10px;
   border-right: 4px solid #000000;
+  background-color: rgb(255, 255, 255);
 }
 
 .nav-item {
@@ -36,23 +32,29 @@
   margin: 0;
   text-align: left;
 }
+
 .nav-link {
   font-weight: bold;
-  font-family: consolas;
-  color:rgb(0, 0, 0);
+  font-family: Consolas, monospace;
+  color: rgb(8, 0, 255) !important;
+
+  background-color:rgb(255, 255, 255);
 }
-.nav-link {
+
+.navbar-brand-label {
+
+  color: #050505;
+  font-size: 25px;
+  font-family: Arial, sans-serif;
   font-weight: bold;
-  font-family: consolas;
+
 }
 
 
-/* CSS for footer */
-.footer {
- 
-  bottom: 0;
-  width: 100%;
-  height: 60px; /* Set the height of your footer */
-  background-color: #000000;
-  text-align: center;
+.navbar-brand {
+  display: flex;
+  align-items: center;
+}
+.hover-color:hover {
+  background-color: rgb(186, 186, 186); /* Change the color to your desired hover color */
 }
