--- a/css/index.css
+++ b/css/index.css
@@ -58,3 +58,11 @@
 .hover-color:hover {
   background-color: rgb(186, 186, 186); /* Change the color to your desired hover color */
 }
+
+.btn-success {
+  background-color: #4bb543;
+  border: none;
+  border-radius: 10px;
+  box-shadow: 5px 5px 20px rgba(0, 0, 0, 0.1);
+  padding: 10px 15px;
+}
